# protnote

./: .editorconfig  .gitignore  README.md  pyproject.toml
configs/: base_config.yaml  base_config.yaml.template
misc/: pyproject.toml.legacy
protnote/data/: collators.py  datasets.py  samplers.py
protnote/models/: ProtNote.py  ProtNoteTrainer.py  blast.py  protein_encoders.py
protnote/utils/: configs.py  data.py  evaluation.py  losses.py  main_utils.py  models.py  notebooks.py  proteinfer.py
