[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "protnote"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "torchmetrics==1.4.0",
    "torcheval==0.0.7",
    "tensorboard==2.16.2",
    "torchdata==0.8.0",
    "transformers>=4.57.6,<5",
    "wandb>=0.24.0,<0.25",
    "sacremoses==0.0.53",
    "pynvml==11.5.0",
    "wget==3.2",
    "azureml-mlflow==1.53.0",
    "loralib==0.1.2",
    "obonet==1.0.0",
    "blosum==2.0.2",
    "biopython==1.84",
    "umap-learn==0.5.4",
    "tables==3.8.0",
    "ruff>=0.14.13",
]

[tool.hatch.build.targets.wheel]
packages = ["protnote"]

[tool.hatch.build.targets.sdist]
include = [
    "protnote",
    "README.md",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ",pixi",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    ".zed",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "misc",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
docstring-code-format = true
docstring-code-line-length = 120

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

select = ["ALL"]
ignore = [
    "ANN",      # flake8-annotations
    "B905",     # zip-without-explicit-strict
    "E402",     # module-import-not-at-top-of-file
    "EM",       # flake8-errmsg
    "ERA",      # eradicate
    "F405",     # undefined-local-with-import-star-usage
    "FBT",      # flake8-boolean-trap
    "FIX",      # flake8-fixme
    "G004",     # logging-f-string
    "INP",      # flake8-no-pep420
    "LOG015",   # root-logger-call
    "N806",     # non-lowercase-variable-in-function
    "PLR0913",  # too-many-arguments
    "PLR2004",  # magic-value-comparison
    "PTH",      # flake8-use-pathlib
    "S",        # flake8-bandit
    "T",        # flake8-print
    "TD",       # flake8-todos
    "TRY",      # tryceratops
]

[tool.pixi.workspace]
channels = ["conda-forge", "pytorch", "nvidia"]
platforms = ["linux-64"]
channel-priority = "disabled"

[tool.pixi.system-requirements]
cuda = "11.8"

[tool.pixi.dependencies]
cuda-version = "11.8.*"

pytorch = { version = "2.4.0.*", channel = "pytorch" }
torchvision = { version = "0.19.0.*", channel = "pytorch" }
pytorch-cuda = { version = "11.8.*", channel = "pytorch" }

numpy = "<2.0"
pandas = "1.5.2.*"
scipy = "1.13.1.*"
scikit-learn = "1.5.0.*"
matplotlib = "3.9.*"
seaborn = "0.13.2.*"
ipykernel = "6.29.5.*"
joblib = "1.2.0.*"

[tool.pixi.pypi-dependencies]
protnote = { path = ".", editable = true }
